finalize signature