@@ -1,17 +1,17 @@
 package com.instantsystem.recruitment.carparkcontext.readside.domain.usecase;
 
-import com.instantsystem.recruitment.carparkcontext.readside.domain.model.CarParkCapacity;
-import com.instantsystem.recruitment.carparkcontext.readside.domain.model.CarParkInformation;
+import com.instantsystem.recruitment.carparkcontext.readside.domain.model.Capacity;
+import com.instantsystem.recruitment.carparkcontext.readside.domain.model.CarPark;
 import com.instantsystem.recruitment.carparkcontext.readside.domain.model.CityNotHandledException;
 import com.instantsystem.recruitment.carparkcontext.readside.domain.model.Coordinates;
-import com.instantsystem.recruitment.carparkcontext.readside.domain.model.NearbyCarParksVm;
+import com.instantsystem.recruitment.carparkcontext.readside.domain.usecase.RetrieveNearbyCarParksHandler.NearbyCarParksVm;
 import com.instantsystem.recruitment.carparkcontext.readside.domain.usecase.RetrieveNearbyCarParksHandler.RetrieveNearbyCarParksQuery;
 import com.instantsystem.recruitment.carparkcontext.readside.secondaryadapters.InMemoryCityParkingDataProvider;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
-import java.util.Collections;
 import java.util.Map;
+import java.util.Set;
 
 import static org.assertj.core.api.AssertionsForClassTypes.assertThat;
 import static org.assertj.core.api.AssertionsForClassTypes.assertThatThrownBy;
@@ -26,17 +26,17 @@ class RetrieveNearbyCarParksHandlerTest {
         handler = new RetrieveNearbyCarParksHandler(
                 Map.of(
                         "Paris", new InMemoryCityParkingDataProvider(
-                                Map.of(
-                                        new CarParkInformation("Opera", new Coordinates(1, 1)), new CarParkCapacity(10, 4),
-                                        new CarParkInformation("Chatelet", new Coordinates(2, 4)), new CarParkCapacity(20, 12)
-                                )
-                        ),
+                                Set.of(
+                                        new CarPark("Opera", 10, new Coordinates(1, 1), new Capacity(10, 4)),
+                                        new CarPark("Chatelet", 14, new Coordinates(2, 2), new Capacity(20, 12))
+                                )),
+
                         "Nice", new InMemoryCityParkingDataProvider(
-                                Map.of(
-                                        new CarParkInformation("Promenade", new Coordinates(4, 4)), new CarParkCapacity(10, 4),
-                                        new CarParkInformation("Centre", new Coordinates(42, 44)), new CarParkCapacity(20, 12)
-                                )
-                        )));
+                                Set.of(
+                                        new CarPark("Promenade", 10, new Coordinates(3, 3), new Capacity(17, 6)),
+                                        new CarPark("Chatelet", 14, new Coordinates(4, 4), new Capacity(30, 17))
+                                ))
+                ));
     }
 
     @Test
@@ -59,6 +59,9 @@ class RetrieveNearbyCarParksHandlerTest {
 
         final var actual = handler.execute(query);
 
-        assertThat(actual).isEqualTo(new NearbyCarParksVm(Collections.emptySet()));
+        assertThat(actual).isEqualTo(new NearbyCarParksVm(Set.of(
+                new CarPark("Opera", 10, new Coordinates(1, 1), new Capacity(10, 4)),
+                new CarPark("Chatelet", 14, new Coordinates(2, 2), new Capacity(20, 12))
+        )));
     }
 }
